prevent scrollbar jumping

--- a/src/scss/base/_default.scss
+++ b/src/scss/base/_default.scss
@@ -22,6 +22,8 @@ textarea {
 }
 
 html {
+  min-height: 100%;
+  overflow-y: scroll;
   line-height: 1.4;
   box-sizing: border-box;
 }
